# tfplan-summary

./: .gitignore  .pre-commit-config.yaml  README.md  example_no-op.json  example_tfplan.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_project.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-enhancement.yml  03-documentation.yml
.github/workflows/: docs  python.yml  release-drafter.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/api-reference/: index.md
docs/documentation/: index.md
docs/tests/: index.md
docs/usage/: index.md
examples/terraform/: main.tf
src/tfplan_summary/: main.py
tests/: test_main.py
